--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2024"
 [dependencies]
 argon2 = "0.5.3"
 axum = "0.8.3"
+cookie = "0.18.1"
 dotenvy = "0.15.7"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sha2 = "0.10.8"
 sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
 tokio = { version = "1.44.2", features = ["full"] }
 tracing = "0.1.41"
