--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # App
 TODOLISTIFY_APP_PORT=3000
+TODOLISTIFY_APP_FRONTEND_URL=http://localhost:8080
 
 # Datebase
 TODOLISTIFY_DATABASE_URL=postgres://postgres:password@localhost:5432/to_do_listify
